--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# energypal
+# energypal <img src="man/figures/logo.png" align="right" height="136" alt="" />
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
@@ -21,12 +21,11 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 <!-- Please note that this project is currently under development. --> 🚧
-This is a *placeholder* for the energypal package. The goal of the project is to assemble a curated collection of color palettes tailored for energy-related visualizations, ready to use with ggplot2 and other plotting frameworks. The palettes are inspired by — and occasionally shamelessly pirated from — publicly available visualizations used in major energy modeling projects and reports, with the goal of returning them to the public domain and promoting clarity, consistency, and visual appeal in energy system research and communication.
+This is a *placeholder* for the `energypal` package. The goal of the project is to assemble a curated collection of color palettes tailored for energy-related visualizations, ready to use with ggplot2 and other plotting frameworks. The palettes are inspired by — and occasionally shamelessly pirated from — publicly available visualizations used in major energy modeling projects and reports, with the goal of returning them to the public domain and promoting clarity, consistency, and visual appeal in energy system research and communication.
 
 
 ## Installation
-🚧 Not yet available.
-The first public version of energypal will be available from [GitHub](https://github.com/):
+The first public version of `energypal` will be available for installation from [GitHub](https://github.com/optimal2050/energypal):
 
 ``` r
 # install.packages("pak")
